--- a/index.html
+++ b/index.html
@@ -11930,6 +11930,7 @@ textarea {
             <div class="team-grid KeyNotesContainer">
                 <div class="intro flex flex-col align-middle text-center">
                     <h2 class="">Keynote Speakers</h2>
+                     <!--
                     <div class=" KeynoteP">
                         <div class="">
                             <p class="text-muted">
@@ -11937,6 +11938,7 @@ textarea {
                             </p>
                         </div>
                     </div>
+                    -->
                 </div>
                 <div style="height: 2rem;"></div>
 
@@ -11979,87 +11981,140 @@ textarea {
                                     Govt of India.
                                 </p>
                             </div> -->
-                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/pushpakbh/"
-                                aria-label="Pushpak Bhattacharyya LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://sites.google.com/view/bchanda/home"
+                                aria-label="Prof. Bhabatosh Chanda Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
-
+                 <div class="row people ">
                     <div class="col-md-6">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
-                            <h4>person 2</h4>
-                            <p class="text-muted">IBM Distinguished Engineer and Senior Manager<br>
-                               Data and AI Platforms<br>
-                                IBM Research AI</p>
+                      <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="assets/img/team/Bchanda_round.png" alt="..." />
+                        <h4>Prof. Bhabatosh Chanda</h4>
+                        <p class="text-muted"> Professor (Retired)<br>
+                          Electronics and Communication Sciences Unit<br>
+                          Indian Statistical Institute, Kolkata</p>
                             <!-- <div class="bio">
-                                <p>Anirban Dasgupta is currently the N. Rama Rao Chair Professor of
-                                    Computer Science & Engineering at IIT Gandhinagar. Prior to being at
-                                    IIT Gandhinagar, he was a Senior Scientist at Yahoo Labs Sunnyvale.
-                                    Anirban works on algorithmic problems for massive data sets,
-                                    large-scale machine learning, analysis of large social networks, and
-                                    randomized algorithms in general. He did his undergraduate studies at
-                                    IIT Kharagpur and doctoral studies at Cornell University. He has
-                                    received the Google Faculty Research Award (2015), the Cisco
-                                    University Award (2016), the ICDT Best Newcomer Award (2016), and the
-                                    Google India AI/ML Award (2020).
-                                    </p>
+                                <p>Ganesh Ramakrishnan is currently serving as an Institute Chair Professor at
+                                    the Department of Computer Science and Engineering, IIT Bombay. His areas of
+                                    research include human assisted AI/ML, AI/ML in resource constrained
+                                    environments, learning with symbolic encoding of domain knowledge in ML and
+                                    NLP, etc. More recently, he has been focusing his energy on organizing
+                                    relevant machine learning modules for resource constrained environments into
+                                    https://decile.org/. In the past, he has demonstrated the impact of such data
+                                    efficient machine learning in applications such as Video Analytics and OCR
+                                    and is seeking to make similar impacts in creating a machine translation
+                                    eco-system and in multi-modal analytics. In the past, he has received
+                                    awards such as IBM Faculty Award, and awards from Qualcomm, Microsoft as well
+                                    as IIT Bombay Impactful Research Award. He also held the J.R. Isaac Chair at
+                                    IIT Bombay. He has recently received the National Award for eGovernance
+                                    (Gold Award)in 2022 under the Category "Outstanding research on Citizen
+                                    Centric Services by Academic/Research Institution" from the Government of
+                                    India for Video Analytics for Security and Compliance Applications.
+                                    Ganesh is very passionate about boosting the AI research eco-system for India
+                                    and toward that, the research by him and his students as well as
+                                    collaborators has resulted in startups that he has either jointly founded,
+                                    has transferred technology to, or is mentoring. Ganesh is also currently
+                                    serving as the Professor-in-charge of the Koita Centre for Digital Health at
+                                    IIT Bombay. Recently, owing to his leadership with the National Disease
+                                    Modeling Consortium, he has been selected to be a disease and economic
+                                    modelling expert member of Standing Technical Sub Committee (STSC) as well as
+                                    an expert member of Standing Working Group – Immunization and Vaccine
+                                    Research and Capacity Building (SWG-IVRCB) as part of NTAGI (National
+                                    Technical Advisory Group on Immunization), Ministry of Health and Family Welfare,
+                                    Govt of India.
+                                </p>
                             </div> -->
-
-                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/sameepmehta/"
-                                aria-label="Sameep Mehta LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://sites.google.com/view/bchanda/home"
+                                aria-label="Prof. Bhabatosh Chanda Profile"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                 <div class="row people ">
+                    <div class="col-md-6">
+                      <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="assets/img/team/Bchanda_round.png" alt="..." />
+                        <h4>Prof. Bhabatosh Chanda</h4>
+                        <p class="text-muted"> Professor (Retired)<br>
+                          Electronics and Communication Sciences Unit<br>
+                          Indian Statistical Institute, Kolkata</p>
+                            <!-- <div class="bio">
+                                <p>Ganesh Ramakrishnan is currently serving as an Institute Chair Professor at
+                                    the Department of Computer Science and Engineering, IIT Bombay. His areas of
+                                    research include human assisted AI/ML, AI/ML in resource constrained
+                                    environments, learning with symbolic encoding of domain knowledge in ML and
+                                    NLP, etc. More recently, he has been focusing his energy on organizing
+                                    relevant machine learning modules for resource constrained environments into
+                                    https://decile.org/. In the past, he has demonstrated the impact of such data
+                                    efficient machine learning in applications such as Video Analytics and OCR
+                                    and is seeking to make similar impacts in creating a machine translation
+                                    eco-system and in multi-modal analytics. In the past, he has received
+                                    awards such as IBM Faculty Award, and awards from Qualcomm, Microsoft as well
+                                    as IIT Bombay Impactful Research Award. He also held the J.R. Isaac Chair at
+                                    IIT Bombay. He has recently received the National Award for eGovernance
+                                    (Gold Award)in 2022 under the Category "Outstanding research on Citizen
+                                    Centric Services by Academic/Research Institution" from the Government of
+                                    India for Video Analytics for Security and Compliance Applications.
+                                    Ganesh is very passionate about boosting the AI research eco-system for India
+                                    and toward that, the research by him and his students as well as
+                                    collaborators has resulted in startups that he has either jointly founded,
+                                    has transferred technology to, or is mentoring. Ganesh is also currently
+                                    serving as the Professor-in-charge of the Koita Centre for Digital Health at
+                                    IIT Bombay. Recently, owing to his leadership with the National Disease
+                                    Modeling Consortium, he has been selected to be a disease and economic
+                                    modelling expert member of Standing Technical Sub Committee (STSC) as well as
+                                    an expert member of Standing Working Group – Immunization and Vaccine
+                                    Research and Capacity Building (SWG-IVRCB) as part of NTAGI (National
+                                    Technical Advisory Group on Immunization), Ministry of Health and Family Welfare,
+                                    Govt of India.
+                                </p>
+                            </div> -->
+                            <a class="btn btn-dark btn-social mx-2" href="https://sites.google.com/view/bchanda/home"
+                                aria-label="Prof. Bhabatosh Chanda Profile"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                 <div class="row people ">
+                    <div class="col-md-6">
+                      <div class="team-member">
+                        <img class="mx-auto rounded-circle" src="assets/img/team/Bchanda_round.png" alt="..." />
+                        <h4>Prof. Bhabatosh Chanda</h4>
+                        <p class="text-muted"> Professor (Retired)<br>
+                          Electronics and Communication Sciences Unit<br>
+                          Indian Statistical Institute, Kolkata</p>
+                            <!-- <div class="bio">
+                                <p>Ganesh Ramakrishnan is currently serving as an Institute Chair Professor at
+                                    the Department of Computer Science and Engineering, IIT Bombay. His areas of
+                                    research include human assisted AI/ML, AI/ML in resource constrained
+                                    environments, learning with symbolic encoding of domain knowledge in ML and
+                                    NLP, etc. More recently, he has been focusing his energy on organizing
+                                    relevant machine learning modules for resource constrained environments into
+                                    https://decile.org/. In the past, he has demonstrated the impact of such data
+                                    efficient machine learning in applications such as Video Analytics and OCR
+                                    and is seeking to make similar impacts in creating a machine translation
+                                    eco-system and in multi-modal analytics. In the past, he has received
+                                    awards such as IBM Faculty Award, and awards from Qualcomm, Microsoft as well
+                                    as IIT Bombay Impactful Research Award. He also held the J.R. Isaac Chair at
+                                    IIT Bombay. He has recently received the National Award for eGovernance
+                                    (Gold Award)in 2022 under the Category "Outstanding research on Citizen
+                                    Centric Services by Academic/Research Institution" from the Government of
+                                    India for Video Analytics for Security and Compliance Applications.
+                                    Ganesh is very passionate about boosting the AI research eco-system for India
+                                    and toward that, the research by him and his students as well as
+                                    collaborators has resulted in startups that he has either jointly founded,
+                                    has transferred technology to, or is mentoring. Ganesh is also currently
+                                    serving as the Professor-in-charge of the Koita Centre for Digital Health at
+                                    IIT Bombay. Recently, owing to his leadership with the National Disease
+                                    Modeling Consortium, he has been selected to be a disease and economic
+                                    modelling expert member of Standing Technical Sub Committee (STSC) as well as
+                                    an expert member of Standing Working Group – Immunization and Vaccine
+                                    Research and Capacity Building (SWG-IVRCB) as part of NTAGI (National
+                                    Technical Advisory Group on Immunization), Ministry of Health and Family Welfare,
+                                    Govt of India.
+                                </p>
+                            </div> -->
+                            <a class="btn btn-dark btn-social mx-2" href="https://sites.google.com/view/bchanda/home"
+                                aria-label="Prof. Bhabatosh Chanda Profile"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
-                <!-- <div class="row people ">
-                  <div class="col-md-6">
-                      <div class="team-member">
-                          <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
-                          <h4>person 3</h4>
-                          <p class="text-muted">Associate Professor<br>
-                            Department of Computer Science and Engineering<br>
-                            Indian Institute of Technology Patna</p>
-                          <div class="bio">
-                              <p>Ganesh Ramakrishnan is currently serving as an Institute Chair Professor at
-                                  the Department of Computer Science and Engineering, IIT Bombay. His areas of
-                                  research include human assisted AI/ML, AI/ML in resource constrained
-                                  environments, learning with symbolic encoding of domain knowledge in ML and
-                                 l as
-                                  an expert member of Standing Working Group – Immunization and Vaccine
-                                  Research and Capacity Building (SWG-IVRCB) as part of NTAGI (National
-                                  Technical Advisory Group on Immunization), Ministry of Health and Family Welfare,
-                                  Govt of India.
-                              </p>
-                          </div>
-                          <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/sriparna-saha-1a1338161/"
-                              aria-label="Diana Petersen LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
-                      </div>
-                  </div>
-                  <div class="col-md-6">
-                      <div class="team-member">
-                          <img class="mx-auto rounded-circle" src="assets/img/team/person.png" alt="..." />
-                          <h4>person 1</h4>
-                          <p class="text-muted">FNAE, Abdul Kalam National Fellow Professor<br>
-                            Computer Science and Engineering Department<br>
-                            Indian Institute of Technology Bombay</p>
-                          <div class="bio">
-                              <p>Anirban Dasgupta is currently the N. Rama Rao Chair Professor of
-                                  Computer Science & Engineering at IIT Gandhinagar. Prior to being at
-                                  IIT Gandhinagar, he was a Senior Scientist at Yahoo Labs Sunnyvale.
-                                  Anirban works on algorithmic problems for massive data sets,
-                                  large-scale machine learning, analysis of large social networks, and
-                                  randomized algorithms in general. He did his undergraduate studies at
-                                  IIT Kharagpur and doctoral studies at Cornell University. He has
-                                  received the Google Faculty Research Award (2015), the Cisco
-                                  University Award (2016), the ICDT Best Newcomer Award (2016), and the
-                                  Google India AI/ML Award (2020).
-                                  </p>
-                          </div>
-
-                          <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/pushpakbh/"
-                              aria-label="Parveen Anand LinkedIn Profile"><i class="fab fa-linkedin-in"></i></a>
-                      </div>
-                  </div>
-              </div> -->
             </div>
         </div>
         </div>
