--- a/index.html
+++ b/index.html
@@ -11725,8 +11725,8 @@ textarea {
 
                     <!-- <li class="nav-item"><a class="nav-link" href=".html">Home</a></li> -->
                     <!-- <li class="nav-item"><a class="nav-link" href="#activities">Activites</a></li> -->
-                    <li class="nav-item"><a class="nav-link" href="program/index.html">Program</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#program">Programme Schedule</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">Aim & Scope</a></li>
                     <!-- <li class="nav-item"><a class="nav-link" href="#grants">Student Grants</a></li> -->
                     <li class="nav-item"><a class="nav-link" href="#register">Registration</a></li>
                     <!-- <li class="nav-item"><a class="nav-link" href="#Submission">Submission</a></li> -->
@@ -11824,25 +11824,7 @@ textarea {
 
     <!-- Services-->
     <section class="page-section" id="services">
-        <div class="container">
-            <div class="text-center-asli-wala">
-                <h2 class="section-heading text-uppercase">Aim</h2>
-            </div>
-            <div class="text-center">
-                <!-- <h2 class="section-heading text-uppercase">Home</h2> -->
-                <p class="section-subheading Home text-muted" >
-                    <ul>
-                        <li>
-                            <b>Awareness and Skill Development: </b>
-                            To make students and budding industry professionals aware of the transformative potential of deep learning in solving practical problems, particularly in the domains of natural language processing and computer vision.
-                        </li>
-                        <li>
-                            <b>Knowledge Sharing: </b>
-                            To facilitate the exchange of ideas and expertise between participants, renowned academicians, and industry professionals, fostering a deeper understanding of cutting-edge developments in the field.
-                        </li>
-                    </ul>
-                </p>
-            </div>
+            <div class="container">
             <div class="row text-center">
                 <div class="col-md-3 text-center-asli-wala">
                     <!-- <div class="text-center-asli-wala">
@@ -11857,21 +11839,6 @@ textarea {
                             efficient processing and analysis of large datasets while capturing essential information in
                             a compact form, revolutionizing data analysis.</p>
                     </div> -->
-                </div>
-                <div class="col-md-12 text-center-asli-wala">
-                    <div class="text-center-asli-wala">
-                        <span class="fa-stack fa-4x">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="47" height="47" viewBox="0 0 47 47" fill="none">
-                                <path d="M39.1667 36.0333C38.3357 36.0333 37.5387 36.3634 36.9511 36.951C36.3635 37.5386 36.0333 38.3356 36.0333 39.1666C36.0333 39.2857 36.0553 39.4 36.0694 39.516C32.4899 42.3418 28.0605 43.8749 23.5 43.8666C16.8229 43.8666 10.9667 37.6438 10.9667 30.5499C10.9667 23.207 16.9404 17.2333 24.2833 17.2333H25.0667V14.0999H24.2833C15.2123 14.0999 7.83333 21.4789 7.83333 30.5499C7.83333 33.5015 8.66367 36.3309 10.0846 38.7859C5.83427 35.0478 3.13333 29.588 3.13333 23.4999C3.13333 20.1864 3.90413 17.0249 5.4238 14.1062L2.64453 12.6602C0.908246 16.0097 0.00132983 19.7271 0 23.4999C0 36.4578 10.5421 46.9999 23.5 46.9999C28.7859 46.9999 33.8118 45.2453 37.9212 42.0399C38.3483 42.2257 38.8115 42.3139 39.2771 42.2981C39.7426 42.2824 40.1988 42.163 40.6124 41.9487C41.026 41.7344 41.3866 41.4306 41.668 41.0594C41.9494 40.6882 42.1445 40.2589 42.2391 39.8028C42.3337 39.3466 42.3253 38.8752 42.2148 38.4227C42.1042 37.9702 41.8941 37.548 41.5998 37.187C41.3055 36.8259 40.9344 36.535 40.5135 36.3354C40.0926 36.1358 39.6325 36.0326 39.1667 36.0333Z" fill="black"/>
-                                <path d="M18.7998 29.7663V32.8996H15.6665V29.7663H18.7998ZM31.3332 14.0996V17.2329H28.1998V14.0996H31.3332Z" fill="black"/>
-                                <path d="M23.5002 0C18.2143 0 13.1884 1.75467 9.07903 4.96007C8.46016 4.69197 7.7713 4.63073 7.11483 4.78543C6.45837 4.94012 5.86934 5.30251 5.43529 5.81873C5.00125 6.33495 4.74535 6.97744 4.70563 7.65071C4.66592 8.32399 4.84451 8.99211 5.21486 9.55578C5.5852 10.1194 6.12754 10.5486 6.76127 10.7794C7.39499 11.0102 8.08628 11.0303 8.73238 10.8369C9.37848 10.6434 9.9449 10.2466 10.3475 9.70548C10.75 9.16436 10.9673 8.50778 10.9669 7.83333C10.9669 7.71427 10.9449 7.5999 10.9308 7.48397C14.5103 4.65816 18.9397 3.12501 23.5002 3.13333C30.1773 3.13333 36.0335 9.35613 36.0335 16.45C36.0335 23.793 30.0598 29.7667 22.7169 29.7667H21.9335V32.9H22.7169C31.7879 32.9 39.1669 25.521 39.1669 16.45C39.1669 13.4968 38.3334 10.6659 36.9109 8.20933C41.1644 11.9474 43.8669 17.4088 43.8669 23.5C43.8669 26.8135 43.0961 29.975 41.5764 32.8937L44.3557 34.3398C46.0919 30.9902 46.9989 27.2728 47.0002 23.5C47.0002 10.5421 36.4581 0 23.5002 0Z" fill="black"/>
-                                </svg>
-                        </span>
-                        <h4 class="my-3">Scope </h4>
-                    </div>
-                    <div class="homeP">
-                        <p class="text-muted">Natural language processing (NLP) and computer vision (CV) have become increasingly significant due to their wide-ranging applications, such as language translation, speech recognition, image analysis, and automation in the healthcare, education, and transportation sectors. For college students, the program will offer a strong foundation in the concepts and techniques of deep learning, preparing them for advanced research and enhancing their employability in emerging technologies. Beginners in the industry will benefit from practical insights into bridging theoretical knowledge with real-world applications, enabling them to contribute effectively to projects involving language and vision-based solutions. Faculty members will gain exposure to the latest developments and tools in the field, supporting their efforts to integrate cutting-edge topics into their teaching and research.</p>
-                    </div>
                 </div>
                 <!-- <div class="col-md-6">
                     <div class="text-center-asli-wala">
@@ -12267,6 +12234,39 @@ textarea {
 
     <section class="page-section" id="about">
         <div class="container">
+            <div class="text-center-asli-wala">
+                <h2 class="section-heading text-uppercase">Aim</h2>
+            </div>
+            <div class="text-center">
+                <!-- <h2 class="section-heading text-uppercase">Home</h2> -->
+                <p class="section-subheading Home text-muted" >
+                    <ul>
+                        <li>
+                            <b>Awareness and Skill Development: </b>
+                            To make students and budding industry professionals aware of the transformative potential of deep learning in solving practical problems, particularly in the domains of natural language processing and computer vision.
+                        </li>
+                        <li>
+                            <b>Knowledge Sharing: </b>
+                            To facilitate the exchange of ideas and expertise between participants, renowned academicians, and industry professionals, fostering a deeper understanding of cutting-edge developments in the field.
+                        </li>
+                    </ul>
+                </p>
+            </div>
+                <div class="col-md-12 text-center-asli-wala">
+                    <div class="text-center-asli-wala">
+                        <!--<span class="fa-stack fa-4x">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="47" height="47" viewBox="0 0 47 47" fill="none">
+                                <path d="M39.1667 36.0333C38.3357 36.0333 37.5387 36.3634 36.9511 36.951C36.3635 37.5386 36.0333 38.3356 36.0333 39.1666C36.0333 39.2857 36.0553 39.4 36.0694 39.516C32.4899 42.3418 28.0605 43.8749 23.5 43.8666C16.8229 43.8666 10.9667 37.6438 10.9667 30.5499C10.9667 23.207 16.9404 17.2333 24.2833 17.2333H25.0667V14.0999H24.2833C15.2123 14.0999 7.83333 21.4789 7.83333 30.5499C7.83333 33.5015 8.66367 36.3309 10.0846 38.7859C5.83427 35.0478 3.13333 29.588 3.13333 23.4999C3.13333 20.1864 3.90413 17.0249 5.4238 14.1062L2.64453 12.6602C0.908246 16.0097 0.00132983 19.7271 0 23.4999C0 36.4578 10.5421 46.9999 23.5 46.9999C28.7859 46.9999 33.8118 45.2453 37.9212 42.0399C38.3483 42.2257 38.8115 42.3139 39.2771 42.2981C39.7426 42.2824 40.1988 42.163 40.6124 41.9487C41.026 41.7344 41.3866 41.4306 41.668 41.0594C41.9494 40.6882 42.1445 40.2589 42.2391 39.8028C42.3337 39.3466 42.3253 38.8752 42.2148 38.4227C42.1042 37.9702 41.8941 37.548 41.5998 37.187C41.3055 36.8259 40.9344 36.535 40.5135 36.3354C40.0926 36.1358 39.6325 36.0326 39.1667 36.0333Z" fill="black"/>
+                                <path d="M18.7998 29.7663V32.8996H15.6665V29.7663H18.7998ZM31.3332 14.0996V17.2329H28.1998V14.0996H31.3332Z" fill="black"/>
+                                <path d="M23.5002 0C18.2143 0 13.1884 1.75467 9.07903 4.96007C8.46016 4.69197 7.7713 4.63073 7.11483 4.78543C6.45837 4.94012 5.86934 5.30251 5.43529 5.81873C5.00125 6.33495 4.74535 6.97744 4.70563 7.65071C4.66592 8.32399 4.84451 8.99211 5.21486 9.55578C5.5852 10.1194 6.12754 10.5486 6.76127 10.7794C7.39499 11.0102 8.08628 11.0303 8.73238 10.8369C9.37848 10.6434 9.9449 10.2466 10.3475 9.70548C10.75 9.16436 10.9673 8.50778 10.9669 7.83333C10.9669 7.71427 10.9449 7.5999 10.9308 7.48397C14.5103 4.65816 18.9397 3.12501 23.5002 3.13333C30.1773 3.13333 36.0335 9.35613 36.0335 16.45C36.0335 23.793 30.0598 29.7667 22.7169 29.7667H21.9335V32.9H22.7169C31.7879 32.9 39.1669 25.521 39.1669 16.45C39.1669 13.4968 38.3334 10.6659 36.9109 8.20933C41.1644 11.9474 43.8669 17.4088 43.8669 23.5C43.8669 26.8135 43.0961 29.975 41.5764 32.8937L44.3557 34.3398C46.0919 30.9902 46.9989 27.2728 47.0002 23.5C47.0002 10.5421 36.4581 0 23.5002 0Z" fill="black"/>
+                                </svg>
+                        </span> -->
+                        <h4 class="my-3">Scope </h4>
+                    </div>
+                    <div class="homeP">
+                        <p class="text-muted">Natural language processing (NLP) and computer vision (CV) have become increasingly significant due to their wide-ranging applications, such as language translation, speech recognition, image analysis, and automation in the healthcare, education, and transportation sectors. For college students, the program will offer a strong foundation in the concepts and techniques of deep learning, preparing them for advanced research and enhancing their employability in emerging technologies. Beginners in the industry will benefit from practical insights into bridging theoretical knowledge with real-world applications, enabling them to contribute effectively to projects involving language and vision-based solutions. Faculty members will gain exposure to the latest developments and tools in the field, supporting their efforts to integrate cutting-edge topics into their teaching and research.</p>
+                    </div>
+                </div>
             <div class="text-center-asli-wala">
                 <h2 class="section-heading text-uppercase">About</h2>
             </div>
