--- a/index.html
+++ b/index.html
@@ -11825,11 +11825,13 @@ textarea {
     </div>
     <section id="about" class="bg-light">
         <div class="container">
-            <div class="text-center-asli-wala">
+            <div class="team-grid KeyNotesContainer">
+                <div class="intro flex flex-col align-middle text-center">
                 <h2 class="section-heading text-uppercase">Aim & Scope</h2>
             </div>
+            </div>
+            <div style="height: 2rem;"></div>
             <div class="text-center">
-                <!-- <h2 class="section-heading text-uppercase">Home</h2> -->
                 <p class="section-subheading Home text-muted" >
                     <ul>
                         <li>
@@ -12613,6 +12615,7 @@ textarea {
         </div>
     </section>
     <!-- Footer-->
+    <!--
     <footer class="footer py-4">
         <div class="container">
             <div class="row align-items-center">
@@ -12634,7 +12637,7 @@ textarea {
             </div>
         </div>
     </footer>
-
+    -->
     <!-- Portfolio Modals-->
     <!-- Portfolio item 1 modal popup-->
     <div class="portfolio-modal modal fade" id="portfolioModal_ganesh" tabindex="-1" role="dialog" aria-hidden="true">
